# Sequential-vs-Parallel-JPEG-compression

./: .gitignore  CMakeLists.txt  README.md
src/: CPUjpeg.cpp  benchmark.cpp
